# cosmo-query

./: Readme.md
backend/: docker-compose.yml  index_data.py  index_data_embedding.py  index_data_raw.py  main.py  max_word_length.py  pyproject.toml
