[project]
name = "cosmo-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "elastic-transport>=8.0.0,<9.0.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.116.1",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
]
